# Game-Of-Life-OpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
include/: GLScene.h  World3d.h
menu/: CMakeLists.txt
src/: CMakeLists.txt  Conway  GLScene.cpp  Life.cpp  Makefile  cmake_install.cmake  main.cpp
